--- a/artifacts/appconfig.json
+++ b/artifacts/appconfig.json
@@ -3,7 +3,7 @@
   "provider": "Forecast Ltd.",
   "description": "Current weather based on your location, determined by your IP address",
   "version": "1.0.0",
-  "icon": "https://www.metaweather.com/static/img/weather/png/64/s.png",
+  "icon": "https://www.metaweather.com/static/img/weather/s.svg",
   "useShellSDK": true,
   "dockerRegistry": "beatmeiersap",
   "helmChartVersion": "1.0.0",
