--- a/artifacts/appconfig.json
+++ b/artifacts/appconfig.json
@@ -3,10 +3,10 @@
   "provider": "Forecast Ltd.",
   "description": "Current weather based on your location, determined by your IP address",
   "version": "1.0.0",
-  "icon": "https://www.metaweather.com/static/img/weather/s.svg",
+  "icon": "https://raw.githubusercontent.com/agugger/agugger-extension/master/IconWeather.png",
   "useShellSDK": true,
   "dockerRegistry": "beatmeiersap",
-  "helmChartVersion": "1.0.0",
+  "helmChartVersion": "1.0.1",
   "parameters": [],
   "outletPositions": []
 }
